fix: layout problem with tiles-mode every 100 items #767

--- a/frontend/src/index.scss
+++ b/frontend/src/index.scss
@@ -634,8 +634,9 @@ form label+input { margin-top: .2em; }
             .entry-details {
                 font-size: 80%;
             }
-            &.page-separator::before {
-                content: '';
+            &.page-separator {
+                margin-top: 0;
+                &::before { content: ''; }
             }
             input[type=checkbox] {
                 margin: 0;
